<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xulyketqua"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textColor="#0000FF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nhana"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"
            android:textColor="#008080"/>

        <EditText
            android:id="@+id/edtAA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:focusable="false"
            android:focusableInTouchMode="false"
            tools:ignore="LabelFor,TextFields,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nhanb"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"
            android:textColor="#008080"/>

        <EditText
            android:id="@+id/edtBB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:focusable="false"
            android:focusableInTouchMode="false"
            tools:ignore="LabelFor,TextFields,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    </LinearLayout>

    <Button
        android:id="@+id/btnsendtong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travetong" />

    <Button
        android:id="@+id/btnsendhieu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travehieu" />

</LinearLayout>